# medquery-ai

./: .gitignore  vercel.json
backend/: config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/middleware/: auth_middleware.py
backend/models/: __init__.py  chat.py  document.py  user.py
backend/routers/: admin.py  auth.py  chat.py  documents.py  user.py
backend/schemas/: auth.py  chat.py  document.py  user.py
backend/services/: auth_service.py  embedding_service.py  llm_services.py  pdf_services.py  rag_service.py  vector_service.py
backend/utils/: hashing.py  jwt_handler.py  token_blacklist.py
frontend/: .env.production  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/layout/: DashboardNav.jsx  Navbar.jsx
frontend/src/components/ui/: Loader.jsx  Toast.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useCountUp.js  useScrollReveal.js
frontend/src/pages/admin/: AdminDashboard.jsx
frontend/src/pages/auth/: LoginPage.jsx  OAuthCallbackPage.jsx  SignupPage.jsx
frontend/src/pages/private/: ChatPage.jsx  DashboardPage.jsx  DocumentsPage.jsx  HistoryPage.jsx  LibraryPage.jsx  ProfilePage.jsx
frontend/src/pages/public/: AboutPage.jsx  FeaturePage.jsx  LandingPage.jsx  PricingPage.jsx  ServicesPage.jsx
frontend/src/routes/: PrivateRoute.jsx  PublicRoute.jsx
frontend/src/services/: adminApi.js  api.js  authApi.js  chatApi.js  documentsApi.js  usersApi.js
